--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -713,7 +713,7 @@ The reader is encouraged to report any technical or editing issues/problems
 \chapter{Scope}
 \pagenumbering{arabic} 
 This \IS specifies the Distributed Ontology, Modeling and Specification
- Language (DOL) designed to achieve integration and interoperability of
+ Language (DOL). DOL is designed to achieve integration and interoperability of
 ontologies, specifications and models (OMS for short). DOL is a language for
 distributed knowledge representation, system specification and 
 model-driven development across multiple OMS, particularly OMS
@@ -728,11 +728,12 @@ Logical languages are used in several fields of computing for the development of
   of systems. Ontologies, models  and specifications will (for the purpose of this document)
    henceforth be abbreviated as \textbf{OMS}.
 
-An OMS provides formal descriptions the scope of which ranges from domain knowledge and activities
+An OMS provides formal descriptions which range in scope from domain knowledge and activities
 (ontologies, models) to properties and behaviors of hardware and software systems (models,
 specifications). These formal descriptions can be used for the analysis and verification of domain
-models, system models and systems, using rigorous and effective reasoning tools.  Since these
-models and systems become increasingly complex, usually a monolithic description is not feasible.
+models, system models and systems themselves, using rigorous and effective reasoning tools.  Since these
+models and systems become increasingly complex, usually a monolithic description is not feasible.\todo{Terry: As  systems increase in complexity, it becomes concomitantly less practical to provide a logical cover for all.  Instead models are developed to represent different viewpoints or perspectives on a domain or system. Till: ``a logical cover for all'' is not the point, the point is a
+\emph{monolithic} description that is not feasible.}
 Instead, different viewpoints on one domain or system are modeled.  Hence, interoperability becomes
 a crucial issue, in particular, formal interoperability, i.e.\ interoperability that is based on
 the formal semantics of the different viewpoints. Interoperability is both about the ability to 
@@ -793,7 +794,7 @@ The following are within the scope of this \IS:
 \item\label{it:scope-heterogeneous} homogeneous OMS as well as heterogeneous OMS (the combining parts written in different languages)
 \item mappings between OMS (mapping
 OMS symbols to OMS symbols)
-\item structured and focused OMS as well as OMS network (the latter involve several focused OMS and mappings between them)
+\item structured and focused OMS as well as OMS networks (the latter involve several focused OMS and mappings between them)
 \item \label{it:scope-translation} translations between different OMS languages conformant with DOL (translating whole OMS to another language)
 \item\label{it:scope-annotation} annotation and documentation of OMS, mappings between OMS, symbols,
 and sentences
@@ -854,7 +855,7 @@ criteria) to a language that already is DOL-conforming.
 mechanisms
 \item its annotation language aspect must not conflict with DOL's meta-language constructs.
 \end{itemize}
-We also define different conformance levels w.r.t.\ the usage of IRIs as identifiers for all kinds
+We also define different conformance levels with respect to the usage of IRIs as identifiers for all kinds
 of entities that the OMS language supports.
 
 %
@@ -980,7 +981,7 @@ by using standoff markup.
 Further conformance criteria in this section are introduced to facilitate the convenient reuse of
 verbatim fragments of OMS language inside a DOL document.\\
 Independently from these criteria, we distinguish different levels of conformance of a
-serialization w.r.t.\ its means of conveniently abbreviating long IRI identifiers.
+serialization with respect to its means of conveniently abbreviating long IRI identifiers.
 
 
 We define four levels of conformance of a serialization of an OMS language with DOL.
@@ -1043,7 +1044,7 @@ example, fragment URIs in the style of \nisref{IETF/RFC 5147} for identifying te
 
 ~\todonote[author=Christoph Lange,date=D:201110060000+02'00',type=fyi]{The latter two seem trivial, but we need them to rule out ad hoc diagrams drawn on a napkin}
 
-Independently from the conformance levels given above, there is the following hierarchy of conformance \wrt CURIEs as a means of abbreviating IRIs, listed from highest to lowest:
+Independently from the conformance levels given above, there is the following hierarchy of conformance \wrt CURIEs (compact URIs) as a means of abbreviating IRIs, listed from highest to lowest:
 \begin{description}
 \item[Prefixed CURIE conformance] The given serialization allows non-logical symbol identifiers to have the syntactic form of a CURIE, or any subset of the CURIE grammar that allows named prefixes (\syntax{prefix:reference}).  The serialization is \notrequired to support CURIEs with no prefix.\\
   Informative comment: In this case, a prefix map with multiple prefixes \may be used to map the non-logical symbol identifiers of a basic OMS to IRIs in multiple namespaces (\cf \cref{c:map-ids})
@@ -1191,7 +1192,7 @@ For the purposes of this document, the following terms and definitions apply.
   \termdefinition{non-logical symbol\synonym OMS symbol}{atomic expression or syntactic constituent of an \termref{OMS} that requires an interpretation through a \termref{model}}
 
   \begin{note}
-  The notion of ``atomic sentence'' used in logic is different, it usually
+  This differs from the notion of ``atomic sentence'': such sentences
   may involve several non-logical symbols.
   \end{note}
 
@@ -1299,7 +1300,7 @@ There are also general purpose OMS languages, which can express both \termref{OM
    Many OMS languages have special notations for (query) variables.
   \end{note}
   \begin{note}
-   Usually, query variables are the free variables of a sentence, whereas there
+   Usually, query variables are the free variables of a sentence; there
    can be other (bound) variables.
   \end{note}
   \begin{note}
@@ -1698,7 +1699,7 @@ along the alignment, there is only one concept, representing both
  \begin{note}
   Sharing is always relative to a given OMS network that
   relates different OMS. That is, two given OMS symbols
-  can share w.r.t.\ one OMS network, and not share w.r.t.\ some
+  can share with respect to one OMS network, and not share with respect to some
   other OMS network.
  \end{note}
 
@@ -2086,11 +2087,10 @@ in which the OMS are axiomatized in different logical languages?
 \item What are the relationships between versions of an OMS axiomatized in different logical languages?
 \end{itemize}
 
-These challenges can be illustrated by the following set of use cases. These use cases illustrate 
-that in ontology design, in formal specification, and in model-driven development, the same problem 
-arises: the use of heterogeneous formal representations leads to interoperability challenges. There 
+To illustrate these challenges, in this section we present a set of use cases which highlight different aspects of a theme common to ontology design, formal specification, and model-driven development: 
+ the use of heterogeneous formal representations leads to interoperability challenges. There 
 are ad-hoc solutions to these challenges, and specialized languages and tools are used in practice. 
-However, there is no standardized approach or representation metalanguage to enable more accurate 
+However, absent an approach like DOL, there is no standardized approach or representation metalanguage to enable more accurate 
 and consistent alignment, integration, and mapping among these specifications and the tools that
 implement them.
 
@@ -2282,7 +2282,7 @@ DOL  provides the framework for expressing such bridge rules in a systematic way
 \section{Use Case Onto-5: Verification of rules translating Dublin Core into PROV}
 The Dublin Core Metadata terms, which have been formalized as an RDF Schema vocabulary, developed initially by the digital library community, are less 
 comprehensive but more widely used than PROV (cf. Use Case Onto-1). The rules for translating Dublin Core to the OWL subset of PROV (and, with restrictions, 
-vice versa) are not known to yield valid instances of the PROV data model, i.e. they are not known to yield OWL ontologies consistent w.r.t. the OWL axioms that 
+vice versa) are not known to yield valid instances of the PROV data model, i.e. they are not known to yield OWL ontologies consistent with respect to the OWL axioms that 
 capture part of the PROV data model. This may disrupt systems that would like to reason about the provenance of an entity, and thus the assessment of the 
 entity's quality, reliability or trustworthiness.
 The Dublin Core to PROV ontology translation%
@@ -2489,8 +2489,8 @@ DOL gives interoperability a formal grounding and makes heterogeneous OMS and OM
 
 \begin{description}
 \item[Logic] Most commonly, OMS languages are based on a description logic or some other subset of first-order logic, but in some cases, also higher-order, modal, paraconsistent and other logics are used.
-\item[Modularity] means of structuring an OMS into reusable parts, reusing parts of other OMS, mapping imported symbols to those in the importing OMS, and asserting additional properties about imported symbols.
-\item[Annotation] means of attaching human-readable descriptions to OMS symbols, addressing knowledge engineers and service developers, but also end users of OMS-based services.\ednote{TODO Christoph: reformulate. DOL enables the use of annotations}
+\item[Modularity] A means of structuring an OMS into reusable parts, reusing parts of other OMS, mapping imported symbols to those in the importing OMS, and asserting additional properties about imported symbols.
+\item[Annotation] A means of attaching human-readable descriptions to OMS symbols, addressing knowledge engineers and service developers, but also end users of OMS-based services.\ednote{TODO Christoph: reformulate. DOL enables the use of annotations}
 \end{description}
 Whereas the first feature determines the expressivity of the language and the possibilities for automated reasoning (decidability, tractability, etc.), the latter two intend to facilitate OMS engineering as well as the engineering of OMS-based software.
 
@@ -2561,7 +2561,7 @@ clause~\ref{c:abstract-syntax}.
 
 \section{DOL includes provisions for expressing mappings between OMS.}\label{c:req:links}
 
-DOL provides a syntax for expressing mappings between OMS -- logical OMS Mappings as well as alignments.  One use case illustrating both is sketched in  \fref{f:DOL-mapping}. This \IS specifies a set of logical OMS mapping types and a set of non-logical OMS mapping types.
+DOL provides a syntax for expressing mappings between OMS -- logical OMS Mappings as well as alignments.  One use case illustrating both is sketched in  \fref{f:DOL-mapping}. This \IS defines a set of logical OMS mapping types and a set of non-logical OMS mapping types.
 
 Logical OMS mappings supported by DOL include:
 \begin{itemize}
@@ -2602,11 +2602,13 @@ number of implicit assumptions about which OMS language
 translation or which ontology matcher has been employed.  Depending on
 the OMS engineering workflow or application setting, it can be
 useful to keep these assumptions implicit or to make them explicit.
-DOL permits to leave such assumptions implicit if desired. However, it also enables the user to 
+DOL allows such assumptions to remain implicit, if desired.
+However, it also enables the user to 
 capture these assumptions explicitly as annotations
 to the OMS.  This \IS specifies a
 translation that expands any DOL OMS with implicit assumptions
-into its explicit counterpart.
+into its explicit counterpart.\todo{Terry: (Is this true? if so, rewrite). Perhaps:  This OMS Specification provides a means to specify a translation to expand any DOL OMS with implicit assumptions into an  explicit counterpart. 
+(is such a translation counterpart necessarily unique, either syntactically or semantically?  If a semantically preserving syntax change occurs to the original, will the counterpart change?)}
 
 The following list covers the possible cases where DOL provides a choice between representing information implicitly or  explicitly:
 \begin{description}
