--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -741,6 +741,7 @@ interface different domains and systems, to enable the use of several OMS in a c
 scenario, as well as about coherence and consistency, ensuring at an early stage of the development
 that a coherent system can be reached.
 
+\ednote{@Till: the beginning of this paragraph needs revision}
 In complex applications, which involve multiple OMS with overlapping concept spaces,
 data mapping may also be  between different OMS, and is then called OMS alignment. 
 While OMS alignment is most commonly studied for OMS formalized in the same OMS 
@@ -912,12 +913,6 @@ The \emph{annotation language aspect} of an OMS language is conformant with DOL 
 have no impact on the semantics. The annotation language aspect \shall be non-empty; it \shall
 provide the facility to express comments.
 
-\CLnote{say something about ``infrastructure theories'', i.e. axiomatizations of one logic in
-another logic.  Providers of OMS language translations MAY also provide these (given that the
-translation is theoroidal).  Note the possible trade-off between readability and theorem proving
-complexity (as the infrastructure axioms may be complex) -- so maybe we should encourage multiple
-alternative translations to co-exist.}
-
 We define the following levels of conformance of the abstract syntax of a basic
  OMS language with DOL, listed from highest to lowest:
 
@@ -958,6 +953,10 @@ symbol) in the source \should be attached to its translation in the
 target (if there are more than one sentences (resp.\ symbols)
 expressing the translation, to at least one of them).
 
+A logic translation \may use infrastructure theories to axiomatize a fragment of the syntax of
+the source logic into the target logic \footnote{Such a translation is formally represented as a
+theoroidal institution comorphism.}. For example, the built-in types of an OWL signature are
+axiomatized as datatypes in first-order logic.
 
 \sclause{Conformance of a serialization of an OMS language with DOL}\label{c:conform:serialization}
 
@@ -1921,7 +1920,6 @@ TODO Michael: explain the relationship to other notions of interoperability (fro
 
 
 \chapter{Symbols}
-\ednote{add OMG stuff MC: done}
 
 As listed below, these symbols and abbreviations are generally for the main clauses of the \IS. Some annexes may introduce their own symbols and abbreviations which will be grouped together within that annex.
 
@@ -2700,22 +2698,13 @@ OMS network consisting of focused OMS and OMS mappings. OMS networks may build o
 OMS networks, and they can be used in \syntax{combination}s.  
 }
 \begin{lstlisting}[language=ebnf,escapeinside={()}]  % abstract syntax
-<<<<<<< Updated upstream
+
 NetworkDefn            = 'dist-oms-defn', NetworkName , [ ConsStrength ] , Network ;
 NetworkName            = IRI ;
 Network                = 'dist-oms', NetworkElements , ExcludeExtensions ;
 NetworkElements        = 'dist-oms-elements', { OMSOrMappingorNetworkRef } ;
 ExcludeExtensions    = 'exclude-imports' , { OMSOrMappingorNetworkRef } ; 
 OMSOrMappingorNetworkRef  = IRI ;
-=======
-
-DistOMSDefn            = 'dist-oms-defn', DistOMSName , [ ConsStrength ] , DistOMS ;
-DistOMSName            = IRI ;
-DistOMS                = 'dist-oms', DistOMSElements , ExcludeExtensions ;
-DistOMSElements        = 'dist-oms-elements', { OMSOrMappingorDistOMSRef } ;
-ExcludeExtensions    = 'exclude-imports' , { OMSOrMappingorDistOMSRef } ; 
-OMSOrMappingorDistOMSRef  = IRI ;
->>>>>>> Stashed changes
 \end{lstlisting}
 
 
@@ -3560,7 +3549,7 @@ abstract syntax:
   employed for all basic OMS languages, taking advantage of the
   fact that Common Logic is a common translation target for many
   OMS languages.  In detail, the translational semantics first
-  translates the DOL abstract syntax of into the abstract syntax of
+  translates the DOL abstract syntax into the abstract syntax of
   $DOL(\CL)$, where $DOL(\CL)$ is the homogeneous restriction of DOL
   to libraries with all parts written in Common Logic
   only.  The latter is interpreted as in the case of the direct
@@ -3589,7 +3578,7 @@ properties like finite model or tree model properties.
 
 We now specify the theoretical foundations of the semantics of DOL. Since DOL involves 
 heterogeneous OMS, the semantics is parameterized over an arbitrary but fixed \emph{heterogeneous 
-environment}.  This notion is defined below, it corresponds to a graph of OMS languages and OMS 
+environment}.  This notion is defined below and it corresponds to a graph of OMS languages and OMS 
 language translations and reductions. Below, also notions of \emph{institution} and institution 
 \emph{comorphism} and \emph{morphism} are defined, which provide formalizations of the terms 
 \termref{logic}, resp.\ \termref{logic translation}, resp.\  \termref{logic reduction}. 
@@ -3644,6 +3633,7 @@ logic environment will be provided later.
 We recall the notion of satisfaction system \cite{carnielli2008analysis}, called `rooms' in the 
 terminology of \cite{CharPar}. They capture the Tarskian notion of satisfaction of a
 sentence in a model. For the semantics of minimization, we assume a pre-order on models.
+\todonote{Till, do you have a reason to want to have rooms in this document? I would keep technical concepts to a minimum.}
 
 \begin{definition}\label{def:room}
 A triple $\cR=(Sen,{\cM,\models)}$  is called a  \defsty{satisfaction system}, or \defsty{room}, if $\cR$  consists of
@@ -3716,44 +3706,80 @@ context.  \qed
 \end{definition}
 
 \begin{definition}[Propositional Logic]\label{Prop}
-The institution $\Prop$ is like the institute $\Prop$. Signature morphisms are functions
-$\sigma:{\Sigma_1}\to{\Sigma_2}$. The reduct of a $\Sigma_2$-model $M_2$ along 
-$\sigma:{\Sigma_1}\to{\Sigma_2}$ is the $\Sigma_1$-model given by the composition $M_2\circ\sigma$. 
+The signatures of propositional logic are sets $\Sigma$ of propositional symbols, and signature morphisms are just
+functions $\sigma:{\Sigma_1}\to{\Sigma_2}$ between these sets. 
+A $\Sigma$-model is a function $M : {\Sigma}\to{\{True, False\}}$, and the reduct of a 
+$\Sigma_2$-model $M_2$along a signature morphism $\sigma:{\Sigma_1}\to{\Sigma_2}$ is 
+the $\Sigma_1$-model given by the composition of $\sigma$ with $M_2$. $\Sigma$-sentences are built from the
+propositional symbols with the usual connectives, and sentence translation is replacing the propositional
+symbols along the morphism. Finally, the satisfaction relation is defined by the standard truth-tables
+semantics. It is straightforward to see that the satisfaction condition holds.
 \end{definition}
 
 \begin{definition}[Common Logic - \Clogic]\label{CommonLogic}
-The institution of Common Logic (\Clogic) is like the institute. A \Clogic signature morphism 
+A common logic signature
+$\Sigma$ (called vocabulary in Common Logic terminology) consists of a
+set of names, with a subset called the set of discourse names, and a
+set of sequence markers. 
+A $\Sigma$-model consists of a set $\UR$,
+the universe of reference, with a non-empty subset $\UD\subseteq \UR$,
+the universe of discourse, and four mappings:
+  \begin{itemize}
+   \item $\rel$ from $\UR$ to subsets of $\UD^* = \{<x_1,\ldots,x_n> |
+x_1,\ldots,x_n \in \UD\}$ (i.e., the set of finite sequences of
+elements of $\UD$);
+   \item $\fun$ from $\UR$ to total functions from $\UD^*$ into $\UD$;
+   \item $\intCL$ from names in $\Sigma$ to $\UR$, such that
+$\intCL(v)$ is in $\UD$ if and only if $v$ is a discourse name;
+   \item $\seq$ from sequence markers in $\Sigma$ to $\UD^*$.
+  \end{itemize}  A $\Sigma$-sentence is a first-order
+sentence, where predications and function applications are written
+in a higher-order like syntax: $t(s)$.
+Here, $t$ is an arbitrary term, and $s$ is a sequence term, which can
+be a sequence of terms $t_1\ldots t_n$, or a sequence marker.
+A predication $t(s)$ is interpreted by evaluating the term $t$,
+mapping it to a relation using $\rel$, and then asking whether the sequence
+given by the interpretation $s$ is in this relation.  
+Similarly, a function application $t(s)$ is interpreted using $\fun$.
+Otherwise, interpretation of terms and formulae is as in
+first-order logic. 
+A further
+difference is the presence of sequence terms (namely sequence markers and
+juxtapositions of terms), which denote sequences in $\UD^*$, with term
+juxtaposition interpreted by sequence concatenation.
+Note that sequences are essentially a non-first-order feature that
+can be expressed in second-order logic.
+For details, see \cite{CommonLogic:oldfashioned}.
+
+A \Clogic signature morphism 
 consists of two maps between the sets of names and of sequence markers, such that the property of 
 being a discourse name is preserved and reflected.\footnote{That is, a name is a discourse
-name if and only if its image under the signature morphism is.}  Model reducts leave $\UR$, $\UD$, 
+name if and only if its image under the signature morphism is.}
+  Model reducts leave $\UR$, $\UD$, 
 $\rel$ and $\fun$ untouched, while $\intCL$ and $\seq$ are composed with the appropriate
 signature morphism component.
 \end{definition}
 %
 
-
-
-Further examples of institutes are: $\mathcal{SROIQ}(D)$, Common Logic, unsorted first-order logic, 
+Further examples of institutions are: $\mathcal{SROIQ}(D)$, Common Logic, unsorted first-order logic, 
 many-sorted first-order logic, and many others.  Note that reduct is generally given by forgetting 
-parts of the model, and the pre-order on models is given as follows: $M_1\leq M_2$ if $M_1$ and 
-$M_2$ only differ in the interpretation of propositional non-logical symbols and predicates, and 
-moreover each propositional (and predicate) symbol true in $M_1$ is also true in $M_2$ (for a
-given tuple of arguments).
+parts of the model.
+%, and the pre-order on models is given as follows: $M_1\leq M_2$ if $M_1$ and 
+%$M_2$ only differ in the interpretation of propositional non-logical symbols and predicates, and 
+%moreover each propositional (and predicate) symbol true in $M_1$ is also true in $M_2$ (for a
+%given tuple of arguments).
 
-Assume an arbitrary institute.
+Assume an arbitrary institution.
 
-A \defsty{theory} is a set $\Delta\subseteq Sen$ of sentences It is \defsty{consistent\/} iff it 
-has at least one model. A theory $\Delta\subseteq Sen$ is \defsty{satisfiable}, if it has a model
-$M$ (i.e., a model $M \in \cM$ such that $M\models\varphi$ for $\varphi\in\Delta$).
-%Also,
-\defsty{Semantic entailment} is defined as usual: for  a theory $\Delta\subseteq Sen$ and 
+A \defsty{theory} is a pair $(\Sigma,\Delta)$ where $\Sigma$ is a signature and $\Delta$ is a set of $\Sigma$-sentences.
+ A theory $(\Sigma, \Delta)$ is \defsty{consistent\/} if there exists a $\Sigma$-model $M$ such that
+$M\models\varphi$ for $\varphi \in \Delta$. \defsty{Semantic entailment} is defined as usual: for  a theory $\Delta\subseteq Sen$ and 
 $\varphi\in Sen$, we write $\Delta\models\varphi$, if all models satisfying all sentences in
 $\Delta$ also satisfy $\varphi$.
 
+\medskip
 
-
-Institution comorphisms capture the intuition of translating a
-logic into another one. 
+Institution comorphisms capture the intuition of encoding or embedding a logic into a more expressive one.
 
 \begin{definition}[Institution Comorphism] Given two institutions $I$ and $J$ with $I = (\Sign^I,$ $ \Mod^I, \Sen^I, \models^I)$ and $J = (\Sign^J, \Mod^J,
 \Sen^J, \models^J)$, an \defsty{institution comorphism} from $I$ to
@@ -3767,17 +3793,16 @@ holds, called the \defsty{satisfaction condition}.
 \end{definition}
 
 \noindent
-Here, $\Phi(\Sigma)$ is the translation of signature $\Sigma$ from
+Here, $\Phi(\Sigma)$ is the translation of the signature $\Sigma$ from
 institution $I$ to institution $J$, $\alpha_{\Sigma}(\varphi)$ is the
 translation of the $\Sigma$-sentence $\varphi$ to a
 $\Phi(\Sigma)$-sentence, and $\beta_{\Sigma}(M')$ is the translation
 (or perhaps better: reduction) of the $\Phi(\Sigma)$-model $M'$ to a
 $\Sigma$-model.
 
+\medskip
 
-Institution morphisms capture the intuition of reducing a logic into another one, and are used for 
-logic reductions.
-
+Institution morphisms capture the intuition of projecting from a more expressive logic to a less expressive one.
 
 \begin{definition}[Institution Morphism] Given two institutions $I$ and $J$ with $I = (\Sign^I,$ $ \Mod^I, \Sen^I, \models^I)$ and $J = (\Sign^J, \Mod^J,
 \Sen^J, \models^J)$, an \defsty{institution morphism} from $I$ to
@@ -3795,7 +3820,6 @@ holds, called the \defsty{satisfaction condition}.
 
 \sclause{Direct semantics of DOL language constructs}
 
-<<<<<<< Updated upstream
 The semantics of DOL is based on a fixed (but in principle arbitrary) heterogeneous logical 
 environment is assumed.  The semantic domains are based on this heterogeneous logical environment. 
 A specific heterogeneous logical environment is given in the annexes.
@@ -3806,14 +3830,6 @@ OMS languages and OMS language translations\footnote{The
   defined formally. For this semantics, it suffices to know that there
   is a language-specific semantics of basic OMS as defined
   below.}, a collection of institutes, institute morphisms and
-=======
-The semantics of DOL is based on a fixed (but in principle arbitrary)
-heterogeneous logical environment. 
-%The semantic domains are based on this heterogeneous logical environment. 
-%A specific heterogeneous logical environment is given in the annexes.
-A \emph{heterogeneous logical environment} is given by a collection of
-OMS languages and OMS language translations, a collection of institutes, institute morphisms and
->>>>>>> Stashed changes
 institute comorphisms (serving as logics, logic reductions and logic
 translations), and a collection of serializations. Moreover, there is
 a binary supports relation between OMS languages and institutes,
@@ -3831,7 +3847,8 @@ Some of the comorphisms are marked as default translations.
 %institute. The default union may also be undefined.
 %
 
-The semantic of OMS can be described either on the \emph{theory level} or the \emph{model level}. For an OMS $O$, the \emph{theory-level} semantics $sem^T(O)$ is described by a triple $(\cI,\Sigma, \Delta)$, while the \emph{model-level}semantics is described by a triple $(I, \Sigma, M)$, where $I$ is an institution, $\Sigma$ a signature.  $\Delta$ a set of $\Sigma$-sentences and $M$a class of $\Sigma$-models.  
+The semantic of OMS can be described either on the \emph{theory level} or the \emph{model level}. For an OMS $O$, the \emph{theory-level} semantics $sem^T(O)$ is described by a triple $(\cI,\Sigma, \Delta)$, while the \emph{model-level} 
+semantics is described by a triple $(I, \Sigma, M)$, where $I$ is an institution, $\Sigma$ a signature.  $\Delta$ a set of $\Sigma$-sentences and $M$a class of $\Sigma$-models.  
 
 Model-theory level semantics for an OMS can be defined in a natural way from its theory-level semantics. Let $O$ be a OMS such that $sem^T(O)=(\cI, \Sigma, \Delta)$, then $$sem^M(O)= \{\cI, \Sigma, \{ \cM \in mod(\Sigma) \mid \cM \models \Delta \}).$$
 
@@ -3928,31 +3945,12 @@ Equations for \syntax{OMSDefn} and \syntax{MappingDefn} are given below.
 
 \semdom{sem(\Gamma,L,(\Sigma,\cM),\syntax{MinimizableOMS})=(I,\Sigma',\cM')}
 
-<<<<<<< Updated upstream
 In the context of a global environment $\Gamma$,
 the current language, logic and serialization $L$,  and a local environment $(\Sigma,\cM)$ (of previously declared
 non-logical symbols), an OMS (\syntax{MinimizableOMS})
 $O$ is interpreted as an institute $\cI=logic(\Gamma,L,O)$, a signature $\Sigma=sig(\Gamma,L,O)$ in institute $\cI$ and a class
 of models $\cM=Mod(\Gamma,L,O)$ over signature $\Sigma$.
 We combine this into $sem(\Gamma,L,O)=(logic(\Gamma,L,O),sig(\Gamma,L,O),Mod(\Gamma,L,O))$.
-=======
-\subsubsection*{Semantics of Focused OMS}
-
-In the context of a global environment $\Gamma$.
-%, and 
-%the current language, logic and serialization $L$.
-%  and a local environment $(\Sigma,\cM)$ (of previously declared
-%non-logical symbols), an OMS (\syntax{MinimizableOMS})
-A focused OMS  is interpreted at the model level as a triple $(I, \Sigma, M)$, with 
-an institute $I$, a signature $\Sigma$ in $I$, and a class
-of $\Sigma$-models $M$. % over signature $\Sigma$.
-%We combine this into $sem(\Gamma,L,O)=(logic(\Gamma,L,O),sig(\Gamma,L,O),Mod(\Gamma,L,O))$.
-%$sem(\Gamma,L,(\Sigma,\cM),\syntax{BasicOMS})=(L,\Sigma',\{M'\in Mod(\Sigma')\, |\, M\models\Delta', M'\forget\Sigma\in\cM \})$,\\  where
-%$sem_L(\Sigma,\syntax{BasicOMS})=(\Sigma',\Delta')$
-%
-%$sem(\Gamma,L,(\Sigma,\cM),\syntax{'oms-ref' , OMSRef})= \Gamma(\syntax{OMSRef})$
-%Let $sem_L(\Sigma,\syntax{BasicOMS})=(\Sigma,\Delta)$.
->>>>>>> Stashed changes
 
 For an OMS \syntax{BasicOMS} with current language, logic and serialization $L$, the theory-level semantics are defined as follows:  
 \semdom{sem^T(\syntax{BasicOMS})= sem_L(\syntax{BasicOMS})}  
