--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -516,11 +516,14 @@ Non-normative: \\
 \clearpage
 
 \pagenumbering{roman} 
-
+		
 
 \noindent Copyright \copyright 2014, Object Management Group, Inc.\\
-Copyright \copyright 2008, company name \\
-Copyright \copyright 2008, company name \\
+Copyright \copyright 2014, Fraunhofer FOKUS\\
+Copyright \copyrigh 2014, MITRE\\
+Copyright \copyright 2014, Otto-von-Guericke-Universit{\"a}t Magdeburg  \\
+Copyright \copyright 2014, Thematix Partners LLC \\
+
 
 
 
@@ -710,6 +713,29 @@ The reader is encouraged to report any technical or editing issues/problems
  with this specification to \url{http://www.omg.org/report_issue.htm}.
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\chapter{Submission-Specific Material}
+\section{Submission Preface}
+Fraunhofer FOKUS, MITRE, and Thematix Partners LLC are pleased  to submit this joint proposal in response to the Ontology, Model and Specification Integration and Interoperability (OntoIOp) RFP  (OMG document ad/2013-12-02). The submitter contacts for this submission are:
+\begin{itemize}
+	\item Fraunhofer FOKUS, 
+	\item MITRE, 
+	\item Thematix Partners LLC, Elisa Kendall, ekendall@thematix.com	
+\end{itemize}
+
+
+Clause 0 of this document contains information specific to the OMG submission process and is not part of the proposed specification. The proposed specification starts with Clause 1 “Scope”.
+
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Scope}
 \pagenumbering{arabic} 
 This \IS specifies the Distributed Ontology, Modeling and Specification
