fraunhofer focus submitter added

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -520,7 +520,7 @@ Non-normative: \\
 
 \noindent Copyright \copyright 2014, Object Management Group, Inc.\\
 Copyright \copyright 2014, Fraunhofer FOKUS\\
-Copyright \copyrigh 2014, MITRE\\
+Copyright \copyright 2014, MITRE\\
 Copyright \copyright 2014, Otto-von-Guericke-Universit{\"a}t Magdeburg  \\
 Copyright \copyright 2014, Thematix Partners LLC \\
 
@@ -720,7 +720,7 @@ The reader is encouraged to report any technical or editing issues/problems
 \section{Submission Preface}
 Fraunhofer FOKUS, MITRE, and Thematix Partners LLC are pleased  to submit this joint proposal in response to the Ontology, Model and Specification Integration and Interoperability (OntoIOp) RFP  (OMG document ad/2013-12-02). The submitter contacts for this submission are:
 \begin{itemize}
-	\item Fraunhofer FOKUS, 
+	\item Fraunhofer FOKUS, Andreas Hoffmann, andreas.hoffmann@fokus.fraunhofer.de
 	\item MITRE, 
 	\item Thematix Partners LLC, Elisa Kendall, ekendall@thematix.com	
 \end{itemize}
