--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -721,7 +721,7 @@ The reader is encouraged to report any technical or editing issues/problems
 Fraunhofer FOKUS, MITRE, and Thematix Partners LLC are pleased  to submit this joint proposal in response to the Ontology, Model and Specification Integration and Interoperability (OntoIOp) RFP  (OMG document ad/2013-12-02). The submitter contacts for this submission are:
 \begin{itemize}
 	\item Fraunhofer FOKUS, Andreas Hoffmann, andreas.hoffmann@fokus.fraunhofer.de
-	\item MITRE, 
+	\item MITRE, Leo Obrst, lobrst@mitre.org
 	\item Thematix Partners LLC, Elisa Kendall, ekendall@thematix.com	
 \end{itemize}
 
